# llm-log-analyzer

./: pyproject.toml
app/: Chain.py  ElasticsearchLogsProvider.py  ElasticsearchScheduler.py  Embedding.py  Ingestion.py  LogAnalyzer.py  LogsProvider.py  Prompt.py  Scheduler.py  llm.py  main.py
